Fix awkward cat image on mobile

--- a/themes/BC/assets/sass/_social-media-highlight.scss
+++ b/themes/BC/assets/sass/_social-media-highlight.scss
@@ -38,7 +38,7 @@
     }
     .burns-cat-sketch__image {
         object-fit: contain;
-        min-height: 200px;
+        height: 200px;
         padding: 0 1em;
         clear: both;
     }
